--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>weka-dev</artifactId>
             <version>3.9.6</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
     </dependencies>
 
     <properties>
